spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,9 @@ header {
 nav {
 	position: absolute;
 	display: inline;
+	padding: 10px;
 	left: 750px;
+	top: 15px;
 }
 
 .buttons {
@@ -64,6 +66,50 @@ section {
 	width: 650px;
 	margin: 40px 20px 15px 50px;
 	padding: 10px 30px 30px;
+}
+
+.image {
+	position: relative;
+}
+
+.left {
+	float: left;
+}
+
+.right {
+	float: right;
+}
+
+.thumbnail {
+	margin: 0px 0px 10px 0px;
+	height: 200px;
+	width: 270px;
+}
+
+.banner {
+	color: white;
+	font: bold 24px Helvetica, Sans-Serif;
+	letter-spacing: -1px;
+	background: #4aaaa5;
+	padding: 10px 5px;
+
+	position: absolute;
+	bottom: 35px;
+	left: 0;
+	width: 100%;
+	font-size: 1.25em;
+	text-align: center;
+}
+
+.banner:hover {
+	box-shadow: 5px 5px 10px #888888;
+	outline: 5px solid #4aaaa5;
+ 	outline-offset: 0px;
+}
+
+.banner:active {
+	box-shadow: 2px 2px 10px #666;
+	transform: translateY(4px);
 }
 
 aside {
@@ -122,52 +168,12 @@ h1, h2, h3 {
 	color: #4aaaa5;
 }
 
-/*.hover-outline:hover {
-  outline: 5px solid #4aaaa5;
-  outline-offset: 0px;
-}*/
-
-.thumbnail {
-	margin: 0px 20px 10px 0px;
-}
-
-.banner {
-	color: white;
-	font: bold 24px Helvetica, Sans-Serif;
-	letter-spacing: -1px;
-	background: #4aaaa5;
-	padding: 10px 5px;
-
-	position: absolute;
-	bottom: 35px;
-	left: 0;
-	width: 91.7%;
-	font-size: 1.25em;
-	text-align: center;
-}
-
-.banner:hover {
-	box-shadow: 5px 5px 10px #888888;
-	outline: 5px solid #4aaaa5;
- 	outline-offset: 0px;
-}
-
-.banner:active {
-	box-shadow: 2px 2px 10px #666;
-	transform: translateY(4px);
-}
-
 .container {
 	flex: 1;
 }
 
 .clear {
 	clear: both;
-}
-
-.image {
-	position: relative;
-	float: left;
 }
 
 .rotate:hover  {
@@ -205,10 +211,15 @@ input.buttons {
 }
 
 #sloth {
-	display: none;
+	display: block;
 	position: absolute;
-	bottom: -20px;
-	right: -620px;
+	bottom: -15px;
+	right: -320px;
+}
+
+.gif {
+	width: 250px;
+	height: auto;
 }
 
 #slothbtn:hover>#sloth {
